--- a/Assignment1/public/stylesheets/style.css
+++ b/Assignment1/public/stylesheets/style.css
@@ -1,8 +1,33 @@
 body {
-  padding: 50px;
+  margin : 0;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+
+/*------------------------Footer------------------------*/
+.footer {
+  background-color: #212529;
+  padding: 20px 0;
+  margin-top: 30px;
+  width: auto;
+  height: auto;
+}
+
+.social-icons a {
+  color: #ffffff;
+  font-size: 1.5rem;
+  margin: 0 10px;
+  transition: color 0.3s ease;
+}
+
+.social-icons a:hover {
+  color: #007bff;
+}
+
+.mb-0 {
+  color: #ffffff;
 }
