--- a/Assignment1/views/contact.hbs
+++ b/Assignment1/views/contact.hbs
@@ -1,4 +1,4 @@
-<div class="container ">
+<div class="contact-container container">
   <div class="row justify-content-center">
     <div class="col-md-8">
       <div class="contact-form">
@@ -16,7 +16,7 @@
             <label for="message" class="form-label">Your Message</label>
             <textarea class="form-control" id="message" rows="5" required></textarea>
           </div>
-          <button type="submit" class="btn btn-primary">Send Message</button>
+          <button type="submit" class="btn btn-primary btn-contact">Send Message</button>
         </form>
       </div>
     </div>
