Added project details and links to project page

--- a/Assignment1/views/projects.hbs
+++ b/Assignment1/views/projects.hbs
@@ -3,55 +3,52 @@
   <div class="row">
     <div class="col">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="/Assignment1/public/images/Telecomm.png" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">TELECOMM</h5>
+                <p class="card-text">Creating a responsive and visually engaging platform for rotary dial phones by implementing dynamic content and ensuring cross-platform compatibility.</p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">HTML</li>
+                <li class="list-group-item">CSS</li>
             </ul>
             <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <a href="https://nibraskhalid.github.io/NibrasKhalid.github.io-Telecomm/" class="card-link">Website</a>
+                <a href="https://github.com/NibrasKhalid/NibrasKhalid.github.io-Telecomm" class="card-link">Repo</a>
             </div>
         </div>
     </div>
     <div class="col">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="/Assignment1/public/images/Budget-Tracker.png" alt="Card image cap">
             <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Budget Tracker</h5>
+                <p class="card-text">To manage personal finances, using Excel files for adding entries, generating reports, and managing transactions</p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">Python</li>
+                <li class="list-group-item">Streamlit</li>
+                <li class="list-group-item">Also made with ASP.NET</li>
             </ul>
             <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <a href="https://budget-tracker-web.streamlit.app/" class="card-link">Web App</a>
+                <a href="https://github.com/NibrasKhalid/Budget-Tracker" class="card-link">GitHub</a>
             </div>
         </div>
     </div>
     <div class="col">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="..." alt="Card image cap">
+            <img class="card-img-top" src="/Assignment1/public/images/Tinkercad.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text">LCD Endless Runner game with three difficulty levels, Easy, Medium, and Hard where each level gets challenging with the increase of speed.</p>
             </div>
             <ul class="list-group list-group-flush">
-                <li class="list-group-item">Cras justo odio</li>
-                <li class="list-group-item">Dapibus ac facilisis in</li>
-                <li class="list-group-item">Vestibulum at eros</li>
+                <li class="list-group-item">C++</li>
+                <li class="list-group-item">Arduino Tinkercad</li>
             </ul>
             <div class="card-body">
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <a href="https://www.tinkercad.com/things/gwRRH42Tkh1-endless-runner?sharecode=q4XNQw6R7jiyvvSUKGPNQWeIUIaY7iY8-ygXtczmE_s" class="card-link">Tinkercad</a>
             </div>
         </div>
     </div>
