--- a/Assignment1/public/stylesheets/style.css
+++ b/Assignment1/public/stylesheets/style.css
@@ -69,6 +69,8 @@ h1 {
 }
 .contact-container {
   margin-top: 20px;
+  height: 80vh;
+  width: auto;
 }
 
 
@@ -77,15 +79,15 @@ h1 {
 .project-h1 {
   text-align: center;
   font-size: 2.5em;
-  margin-bottom: 20px;
   color: #333;
   font-weight: 600;
-  padding: 10px;
-  border-bottom: 2px solid #212529;
+  padding: 50px 0px 0px 0px;
 }
 .project-container{
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 20px;
+  height: 80vh;
+  width: auto;
 }
