Updated Projects page with images

--- a/Assignment1/views/projects.hbs
+++ b/Assignment1/views/projects.hbs
@@ -1,9 +1,9 @@
 <h1 class="project-h1">MY PROJECTS</h1>
-<div class="project-container container text-center">
+{{!-- <div class="project-container container text-center">
   <div class="row">
     <div class="col">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="/Assignment1/public/images/Telecomm.png" alt="Card image cap">
+            <img class="card-img-top" src="/images/Telecomm.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">TELECOMM</h5>
                 <p class="card-text">Creating a responsive and visually engaging platform for rotary dial phones by implementing dynamic content and ensuring cross-platform compatibility.</p>
@@ -20,7 +20,7 @@
     </div>
     <div class="col">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="/Assignment1/public/images/Budget-Tracker.png" alt="Card image cap">
+            <img class="card-img-top" src="/images/Budget-Tracker.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Budget Tracker</h5>
                 <p class="card-text">To manage personal finances, using Excel files for adding entries, generating reports, and managing transactions</p>
@@ -38,7 +38,7 @@
     </div>
     <div class="col">
         <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="/Assignment1/public/images/Tinkercad.png" alt="Card image cap">
+            <img class="card-img-top" src="/images/Tinkercad.png" alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">Card title</h5>
                 <p class="card-text">LCD Endless Runner game with three difficulty levels, Easy, Medium, and Hard where each level gets challenging with the increase of speed.</p>
@@ -53,4 +53,73 @@
         </div>
     </div>
   </div>
+</div> --}}
+<div class="container py-5">
+    <div class="row g-4">
+        <!-- Service Card 1 -->
+        <div class="col-md-4">
+            <div class="service-card hover-lift">
+                <div class="service-card-inner">
+                    <div class="service-card-front">
+                        <div class="service-card-front image-card">
+                            <img src="/images/Telecomm-P.png" alt="Telecomm Project" class="project-img">
+                        </div>
+                    </div>
+                    <div class="service-card-back">
+                        <h4 class="mb-3">Telecomm (Micro-site)</h4>
+                        <ul class="feature-list">
+                            <li>HTML</li>
+                            <li>CSS</li>
+                            <li>Responsive Design</li>
+                        </ul>
+                        <button class="btn btn-primary mt-4">Visit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Service Card 2 -->
+        <div class="col-md-4">
+            <div class="service-card hover-lift">
+                <div class="service-card-inner">
+                    <div class="service-card-front">
+                        <div class="service-card-front image-card">
+                            <img src="/images/Tinkercad.png" alt="Tinkercad Project" class="project-img">
+                        </div>
+                    </div>
+                    <div class="service-card-back">
+                        <h4 class="mb-3">Endless Runner (Arduino)</h4>
+                        <ul class="feature-list">
+                            <li>C++</li>
+                            <li>Arduino Circuit</li>
+                            <li>Tinkercad</li>
+                        </ul>
+                        <button class="btn btn-primary mt-4">Simulate</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Service Card 3 -->
+        <div class="col-md-4">
+            <div class="service-card hover-lift">
+                <div class="service-card-inner">
+                    <div class="service-card-front">
+                        <div class="service-card-front image-card">
+                            <img src="/images/Budget-Tracker.png" alt="Budget-Tracker Project" class="project-img">
+                        </div>
+                    </div>
+                    <div class="service-card-back">
+                        <h4 class="mb-3">Budget Tracker (Web App)</h4>
+                        <ul class="feature-list">
+                            <li>Python</li>
+                            <li>Streamlit</li>
+                            <li>Also made ASP.NET version</li>
+                        </ul>
+                        <button class="btn btn-primary mt-4">Visit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
