--- a/Assignment1/public/stylesheets/style.css
+++ b/Assignment1/public/stylesheets/style.css
@@ -45,6 +45,50 @@ h1 {
   color: #ffffff;
 }
 
+/*------------------------Home Page------------------------*/
+/*------------------------_____________------------------------*/
+.box-height {
+  height: 100vh;
+  width: auto;
+}
+.home-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.home-card {
+  height: auto;
+  width: auto;
+}
+.card{
+  margin: 40px;
+  height: auto;
+  width: 80vw;
+  text-align: left;
+}
+.card p {
+  font-size: 1.8em;
+  color: #555;
+}
+.home-h1 {
+  text-align: left;
+  font-size: 3.5em;
+  color: #212529;
+  font-weight: 600;
+  padding: 50px 0px 0px 150px;
+}
+.card .home-card p{
+  font-size: 1.5em;
+}
+.card .card-title{
+  font-size: 2.0em;
+  text-align: left;
+  padding-left: 0px;
+  margin-left: 0px;
+  color: #212529;
+
+}
 
 /*------------------------Contact Page------------------------*/
 /*------------------------_____________------------------------*/
@@ -72,6 +116,53 @@ h1 {
   height: 80vh;
   width: auto;
 }
+
+
+/* Contact Page Styles */
+.contact-section {
+  padding: 4rem 0;
+}
+
+.contact-section h1 {
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.contact-section p.lead {
+  font-size: 1.2rem;
+  color: #555;
+}
+
+/* Card Styling for Contact Info */
+.card {
+  border-radius: 12px;
+  transition: box-shadow 0.3s ease;
+}
+
+.card:hover {
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.1);
+}
+
+.card-title {
+  font-size: 1.3rem;
+  font-weight: 600;
+  color: #333;
+}
+
+.card p {
+  font-size: 1rem;
+  margin-bottom: 0.8rem;
+}
+
+.card a {
+  color: #0d6efd;
+  text-decoration: none;
+}
+
+.card a:hover {
+  text-decoration: underline;
+}
+
 
 
 /*------------------------Projects Page------------------------*/
