modified project details

--- a/Assignment1/public/stylesheets/style.css
+++ b/Assignment1/public/stylesheets/style.css
@@ -2,6 +2,7 @@ body {
   margin : 0;
   padding: 0px;
   font-family: "Funnel Sans", sans-serif;
+  background-color: #64707c;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: "Funnel Sans", sans-serif;
