--- a/Assignment1/views/index.hbs
+++ b/Assignment1/views/index.hbs
@@ -10,7 +10,7 @@
                     <div class="home-card card-body">
                         <h5 class="card-title">Programming Analyst</h5>
                         <p class="card-text">Hi, I’m Nibras Khalid — a web developer in the making, passionate about creating things that live on the internet. Whether it's a sleek portfolio site, a simple budget tracker, or something completely experimental, I enjoy building projects that are functional and fun to use.</p>
-                        <p class="card-text">I’m currently studying Computer Programming and constantly learning new technologies. This portfolio is a snapshot of my journey so far — feel free to explore my work, learn more about me, or reach out if you'd like to connect.</p>
+                        <p class="card-text">I’m currently studying Computer Programming and constantly learning new technologies. This portfolio is a snapshot of my journey so far. Feel free to explore my work, learn more about me, or reach out if you'd like to connect.</p>
                     </div>
                 </div>
             </div>
