--- a/Assignment1/views/projects.hbs
+++ b/Assignment1/views/projects.hbs
@@ -71,6 +71,7 @@
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>Responsive Design</li>
+                            <li>A micro-site focused on creating a responsive and visually engaging platform for rotary dial phones.</li>
                         </ul>
                         <button class="btn btn-primary mt-4">Visit</button>
                     </div>
@@ -93,6 +94,7 @@
                             <li>C++</li>
                             <li>Arduino Circuit</li>
                             <li>Tinkercad</li>
+                            <li>LCD Endless Runner game with three difficulty levels, Easy, Medium, and Hard where each level gets challenging with the increase of speed.</li>
                         </ul>
                         <button class="btn btn-primary mt-4">Simulate</button>
                     </div>
@@ -115,6 +117,7 @@
                             <li>Python</li>
                             <li>Streamlit</li>
                             <li>Also made ASP.NET version</li>
+                            <li>To manage personal finances, using Excel files for adding entries, generating reports, and managing transactions</li>
                         </ul>
                         <button class="btn btn-primary mt-4">Visit</button>
                     </div>
