--- a/Assignment1/views/projects.hbs
+++ b/Assignment1/views/projects.hbs
@@ -1,60 +1,6 @@
+<div class="proj-body">
 <h1 class="project-h1">MY PROJECTS</h1>
-{{!-- <div class="project-container container text-center">
-  <div class="row">
-    <div class="col">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="/images/Telecomm.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">TELECOMM</h5>
-                <p class="card-text">Creating a responsive and visually engaging platform for rotary dial phones by implementing dynamic content and ensuring cross-platform compatibility.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">HTML</li>
-                <li class="list-group-item">CSS</li>
-            </ul>
-            <div class="card-body">
-                <a href="https://nibraskhalid.github.io/NibrasKhalid.github.io-Telecomm/" class="card-link">Website</a>
-                <a href="https://github.com/NibrasKhalid/NibrasKhalid.github.io-Telecomm" class="card-link">Repo</a>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="/images/Budget-Tracker.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Budget Tracker</h5>
-                <p class="card-text">To manage personal finances, using Excel files for adding entries, generating reports, and managing transactions</p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">Python</li>
-                <li class="list-group-item">Streamlit</li>
-                <li class="list-group-item">Also made with ASP.NET</li>
-            </ul>
-            <div class="card-body">
-                <a href="https://budget-tracker-web.streamlit.app/" class="card-link">Web App</a>
-                <a href="https://github.com/NibrasKhalid/Budget-Tracker" class="card-link">GitHub</a>
-            </div>
-        </div>
-    </div>
-    <div class="col">
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="/images/Tinkercad.png" alt="Card image cap">
-            <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">LCD Endless Runner game with three difficulty levels, Easy, Medium, and Hard where each level gets challenging with the increase of speed.</p>
-            </div>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">C++</li>
-                <li class="list-group-item">Arduino Tinkercad</li>
-            </ul>
-            <div class="card-body">
-                <a href="https://www.tinkercad.com/things/gwRRH42Tkh1-endless-runner?sharecode=q4XNQw6R7jiyvvSUKGPNQWeIUIaY7iY8-ygXtczmE_s" class="card-link">Tinkercad</a>
-            </div>
-        </div>
-    </div>
-  </div>
-</div> --}}
-<div class="container py-5">
+<div class="container py-5 proj-contain">
     <div class="row g-4">
         <!-- Service Card 1 -->
         <div class="col-md-4">
@@ -73,7 +19,7 @@
                             <li>Responsive Design</li>
                             <li>A micro-site focused on creating a responsive and visually engaging platform for rotary dial phones.</li>
                         </ul>
-                        <button class="btn btn-primary mt-4">Visit</button>
+                        <button class="btn btn-primary mt-4"><a class="a-ref" href="https://nibraskhalid.github.io/NibrasKhalid.github.io-Telecomm/">Visit</a></button>
                     </div>
                 </div>
             </div>
@@ -94,9 +40,9 @@
                             <li>C++</li>
                             <li>Arduino Circuit</li>
                             <li>Tinkercad</li>
-                            <li>LCD Endless Runner game with three difficulty levels, Easy, Medium, and Hard where each level gets challenging with the increase of speed.</li>
+                            <li>With three difficulty levels where each level gets challenging with the increase of speed.</li>
                         </ul>
-                        <button class="btn btn-primary mt-4">Simulate</button>
+                        <button class="btn btn-primary mt-4"><a class="a-ref" href="https://www.tinkercad.com/things/gwRRH42Tkh1-endless-runner?sharecode=q4XNQw6R7jiyvvSUKGPNQWeIUIaY7iY8-ygXtczmE_s">Simulate</a></button>
                     </div>
                 </div>
             </div>
@@ -119,10 +65,11 @@
                             <li>Also made ASP.NET version</li>
                             <li>To manage personal finances, using Excel files for adding entries, generating reports, and managing transactions</li>
                         </ul>
-                        <button class="btn btn-primary mt-4">Visit</button>
+                        <button class="btn btn-primary mt-4"><a class="a-ref" href="https://budget-tracker-web.streamlit.app/">Visit</a></button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </div>
