--- a/Assignment1/views/index.hbs
+++ b/Assignment1/views/index.hbs
@@ -1,18 +1,15 @@
-<div class="box-height">
-    <h1 class="home-h1">NIBRAS KHALID</h1>
-    <div class="home-container">
-        <div class="card mb-3">
-            <div class="row g-0">
-                <div class="col-md-4">
-                <img src="images/NibrasKhalid.jpg" class="img-fluid rounded-start" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="home-card card-body">
-                        <h5 class="card-title">Programming Analyst</h5>
-                        <p class="card-text">Hi, I’m Nibras Khalid — a web developer in the making, passionate about creating things that live on the internet. Whether it's a sleek portfolio site, a simple budget tracker, or something completely experimental, I enjoy building projects that are functional and fun to use.</p>
-                        <p class="card-text">I’m currently studying Computer Programming and constantly learning new technologies. This portfolio is a snapshot of my journey so far. Feel free to explore my work, learn more about me, or reach out if you'd like to connect.</p>
-                    </div>
-                </div>
+<div class="hero">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <h1 class="display-4 fw-bold mb-3">NIBRAS KHALID</h1>
+                <p class="lead mb-4">I’m Nibras Khalid — a web developer in the making, passionate about creating things that live on the internet. Whether it's a sleek portfolio site, a simple budget tracker, or something completely experimental, I enjoy building projects that are functional and fun to use.</p>
+                <p class="lead mb-4">I’m currently studying Computer Programming and constantly learning new technologies. This portfolio is a snapshot of my journey so far. Feel free to explore my work, learn more about me, or reach out if you'd like to connect.</p>
+                <a href="/about" class="btn btn-light btn-lg me-2">About Me</a>
+                <a href="/projects" class="btn btn-outline-light btn-lg">Projects</a>
+            </div>
+            <div class="col-lg-6 py-4">
+                <img class="squared" src="/images/NibrasKhalid.jpg" alt="App Screenshot">
             </div>
         </div>
     </div>
