--- a/Assignment1/views/about.hbs
+++ b/Assignment1/views/about.hbs
@@ -1,5 +1,5 @@
 <div class="box-height">
-    <h1 class="home-h1">NIBRAS KHALID</h1>
+    <h1 class="home-h1">Programming Analyst</h1>
     <div class="home-container">
         <div class="card mb-3">
             <div class="row g-0">
@@ -8,10 +8,16 @@
                 </div>
                 <div class="col-md-8">
                     <div class="home-card card-body">
-                        <h5 class="card-title">Programming Analyst</h5>
-                        <p class="card-text">I’m currently studying Computer Programming and Analysis at Georgian College. Throughout my learning journey, I’ve worked on a variety of projects, from building basic websites to creating small games using Arduino. I enjoy the challenge of turning ideas into working projects, even if I’m still figuring things out as I go.</p>
-                        <p class="card-text">Most of my work involves HTML, CSS, JavaScript, and Bootstrap on the front end. I’ve also used Python, C#, and PHP for backend tasks, and MySQL for databases. I’ve built tools like a budget tracker, a micro-site inspired by rotary phones, and a simple endless runner game in Tinkercad.</p>
-                        <p class="card-text">This site is a place to share what I’ve built and what I’m learning. Thanks for visiting, and feel free to check out my projects or contact me if you’d like to connect.</p>
+                        <p class="card-text">I’m currently studying Computer Programming and Analysis at Georgian College, where I’ve explored everything from web development to Arduino projects. I enjoy learning through building, whether it’s a budgeting tool, a rotary phone-inspired website, or a simple game.</p>
+                        <p class="card-text">I mainly work with HTML, CSS, JavaScript, and Bootstrap, and I’ve also used Python, C#, and MySQL for backend tasks. Outside of coding, I’ve helped out at school events like FOTC and the Henry Bernick Awards.</p>
+                        <p class="card-text">This site is a glimpse into what I’ve worked on and where I’m headed. Thanks for visiting!</p>
+                        <h3 class="mt-5">Skills</h3>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item"><strong>Backend:</strong> Python, Java, MySQL, C++, C#, PHP</li>
+                            <li class="list-group-item"><strong>Frontend:</strong> HTML, CSS, JS</li>
+                            <li class="list-group-item"><strong>IDE:</strong> Visual Studio, Visual Studio Code, Android Studio, IntelliJ</li>
+                            <li class="list-group-item"><strong>Version Control:</strong>Git, GitHub</li>
+                        </ul>
                     </div>
                 </div>
             </div>
