--- a/Assignment1/views/projects.hbs
+++ b/Assignment1/views/projects.hbs
@@ -1,5 +1,6 @@
 <div class="proj-body">
-<h1 class="project-h1">MY PROJECTS</h1>
+<h1 class="project-h1">My Projects</h1>
+<p class="lead">Coding projects in Arduino, C#, and Python that showcase diverse skills and hands-on experience.</p>
 <div class="container py-5 proj-contain">
     <div class="row g-4">
         <!-- Service Card 1 -->
