--- a/Assignment1/public/stylesheets/style.css
+++ b/Assignment1/public/stylesheets/style.css
@@ -53,13 +53,12 @@ h1 {
 /*------------------------About Page------------------------*/
 /*------------------------_____________------------------------*/
 .about-img {
-    object-fit: cover;
+  object-fit: cover;
 
 }
 .box-height {
   height: auto;
   width: auto;
-  background-color: #e5e7eb;
   margin-bottom: 0px;
   padding-bottom: 50px;
 }
@@ -91,7 +90,7 @@ h1 {
   padding: 50px 0px 0px 150px;
 }
 .card .home-card p{
-  font-size: 1.5em;
+  font-size: 1.2em;
 }
 .card .card-title{
   font-size: 2.0em;
@@ -99,7 +98,6 @@ h1 {
   padding-left: 0px;
   margin-left: 0px;
   color: #212529;
-
 }
 
 /*------------------------Contact Page------------------------*/
@@ -111,7 +109,13 @@ h1 {
 /*------------------------Projects Page------------------------*/
 /*------------------------_____________------------------------*/
 .proj-body, .cont-body {
-  background-color: #e5e7eb;
+  background-color: white;
+}
+.proj-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .project-h1 {
   text-align: center;
@@ -236,8 +240,7 @@ h1 {
 /*------------------------Home Page------------------------*/
 /*------------------------_____________------------------------*/
 .hero {
-  background: linear-gradient(45deg, #6a11cb 0%, #2575fc 100%);
-  color: white;
+  color: #212529;
   padding-top: 100px;
   padding-bottom: 100px;
 }
@@ -247,4 +250,8 @@ h1 {
   height: 90vh;
   object-fit: cover;
   border-radius: 15px;
+}
+.btn {
+  background-color: #212529;
+  color: white;
 }
