--- a/Assignment1/views/layout.hbs
+++ b/Assignment1/views/layout.hbs
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   </head>
   <body>
+    <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">NK</a>
@@ -38,6 +39,7 @@
         </div>
       </div>
     </nav>
+    </header>
     {{{body}}}
     <footer class="footer">
         <div class="container">
