--- a/Assignment2/public/stylesheets/style.css
+++ b/Assignment2/public/stylesheets/style.css
@@ -1,8 +1,59 @@
+html {
+  scroll-behavior: smooth;
+}
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  font-size: 16px;
+  font-family: "Poppins", sans-serif;
+  background-color: #461BBC;
+  color: white;
 
-a {
-  color: #00B7FF;
 }
+.poppins-extralight {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+p, a, li {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+}
+.testing {
+  margin: 400px;
+}
+.btn {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+}
+/*--------------Navigation--------------*/
+.bg-color {
+  background-color: #461BBC;
+  color: white;
+}
+/*--------------Footer--------------*/
+#bg-color-footer {
+  background-color: #461BBC;
+  color: white;
+}
+.white {
+  color: white;
+}
+/*----------------------------Index----------------------------*/
+
+/*----------------------------Latest----------------------------*/
+
+/*-------------------Movies-Series-Favourites------------------*/
+
+/*----------------------------Log In----------------------------*/
+
+/*----------------------------Sign Up----------------------------*/
+
+/*----------------------------Contact----------------------------*/
+
+
