--- a/Assignment2/views/index.hbs
+++ b/Assignment2/views/index.hbs
@@ -1,2 +1,3 @@
-<h1>{{title}}</h1>
-<p>Welcome to {{title}}</p>
+<!--<h1>{{title}}</h1>
+<p>Welcome to {{title}}</p>-->
+<p class="testing">Testing Text</p>
