--- a/Assignment2/views/layout.hbs
+++ b/Assignment2/views/layout.hbs
@@ -5,9 +5,10 @@
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
     rel="stylesheet">
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <!--BOOTSTRAP CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
@@ -19,44 +20,52 @@
   <!-- Navbar -->
   <header class="p-3 bg-color text-white sticky-top shadow-lg">
     <div class="container">
-      <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
-        <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none">
-          <svg class="bi me-2" width="40" height="32" role="img" aria-label="Bootstrap">
-            <use xlink:href="#bootstrap"></use>
-          </svg>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a href="/" class="navbar-brand d-flex align-items-center me-3">
+          <img src="/images/logo-nav.png" alt="Logo" width="auto" height="32">
         </a>
 
-        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-          <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Latest</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Movies</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Series</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Favorites</a></li>
-          <li><a href="#" class="nav-link px-2 text-white">Contact</a></li>
+        <!-- Toggler -->
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
+          aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
 
-        </ul>
+        <!-- Collapsible Content -->
+        <div class="collapse navbar-collapse" id="navbarContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item"><a class="nav-link px-2 text-white" href="/">Home</a></li>
+            <li class="nav-item"><a class="nav-link px-2 text-white" href="./latest.hbs">Latest</a></li>
+            <li class="nav-item"><a class="nav-link px-2 text-white" href="/">Movies</a></li>
+            <li class="nav-item"><a class="nav-link px-2 text-white" href="/">Series</a></li>
+            <li class="nav-item"><a class="nav-link px-2 text-white" href="/">Favorites</a></li>
+            <li class="nav-item"><a class="nav-link px-2 text-white" href="./contact.hbs">Contact</a></li>
+          </ul>
 
-        <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
-          <input type="search" class="form-control form-control-dark poppins-extralight" placeholder="Search..."
-            aria-label="Search" spellcheck="false" data-ms-editor="true">
-        </form>
+          <form class="d-flex mb-3 mb-lg-0 me-lg-3" role="search">
+            <input type="search" class="form-control form-control-dark poppins-extralight" placeholder="Search..."
+              aria-label="Search">
+          </form>
 
-        <div class="text-end">
-          <button type="button" class="btn btn-outline-light me-2">Login</button>
-          <button type="button" class="btn btn-warning btn-mycolor">Sign-up</button>
+          <div class="text-end">
+            <a href="./login.hbs" type="button" class="btn btn-outline-light me-2">Login</a>
+            <a href="./signup.hbs" type="button" class="btn btn-warning">Sign-up</a>
+          </div>
         </div>
-      </div>
+      </nav>
     </div>
   </header>
+
   {{{body}}}
+
   <div id="bg-color-footer" class="container-fluid shadow-lg">
-    <footer class="py-3 my-4">
+    <footer class="py-3">
       <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Latest</a></li>
-        <li class="nav-item"><a href="#" class="nav-link px-2 text-white">Contact</a></li>
+        <li class="nav-item"><a href="/" class="nav-link px-2 text-white">Home</a></li>
+        <li class="nav-item"><a href="./latest.hbs" class="nav-link px-2 text-white">Latest</a></li>
+        <li class="nav-item"><a href="./contact.hbs" class="nav-link px-2 text-white">Contact</a></li>
       </ul>
-      <p class="text-center text-white">© StreaM</p>
+      <p class="text-center text-white">&copy; STREAM</p>
     </footer>
   </div>
   <!--BOOTSTRAP JS -->
