--- a/Assignment2/views/index.hbs
+++ b/Assignment2/views/index.hbs
@@ -31,7 +31,7 @@
 
                 <!-- Latest button centered -->
                 <div class="mt-4 d-flex justify-content-center">
-                    <a class="btn btn-outline-light btn-lg" href="./latest.hbs" role="button">Latest</a>
+                    <a class="btn btn-outline-light btn-lg" href="./latest" role="button">Latest</a>
                 </div>
             </div>
         </div>
